...
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/action_cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_add" />

    </LinearLayout>

...
