<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    
    <item
        android:id="@+id/sites"
        android:icon="@drawable/ic_sites"
        android:title="@string/menu_sites" />
    
    <item
        android:id="@+id/marketplace"
        android:icon="@drawable/ic_marketplace"
        android:title="@string/menu_marketplace" />
    
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />
</menu>